# ft_nm

./: .gitignore  build.sh  meson.build
inc/: ft_file.h  ft_nm.h
src/: ar.c  find_symbol_table_command.c  macho64.c  main.c  nm_file.c  print_address.c
src/nm/: ar.c  fat.c  macho32.c  macho64.c  main.c  nm_file.c  print_address.c
src/otool/: main.c
